add logo, remove teams page

--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -40,7 +40,7 @@
 					<div class="col-xl-2 col-lg-2">
 						<div class="logo-img">
 							<a href="index.html">
-								<img src="img/logo.png" alt="">
+								<img src="img/logo.png" height="150" alt="">
 							</a>
 						</div>
 					</div>
@@ -64,7 +64,6 @@
 											<li><a href="faaliyetlerimiz.html#kvk">kişisel verilerin korunması</a></li>
 										</ul>
 									</li>
-									<li><a href="ekibimiz.html">ekibimiz</a></li>
 									<li><a href="iletisim.html">iletişim</a></li>
 								</ul>
 							</nav>
@@ -144,13 +143,13 @@
 						<div class="footer_widget">
 							<div class="footer_logo">
 								<a href="index.html">
-									<img src="img/logo.png" alt="">
+									<img src="img/logo.png" height="150" alt="">
 								</a>
 							</div>
 							<p class="footer_text">
-								Osmanağa, Bahariye Cd. No:19 Hak İş Hanı, Daire: 69,70,72 34714 Kadıköy/İstanbul<br />
+								Osmanağa, Bahariye Cd. No:19 Hak İş Hanı, Daire: 72 34714 Kadıköy/İstanbul<br />
 								+90 545 479 0886 <br />
-								<a class="domain" href="#">bilgi@arifanilozturk.av.tr</a>
+								<a class="domain" href="#">arifanilozturk@gmail.com</a>
 							</p>
 							<div class="socail_links">
 								<ul>
