--- a/elements.html
+++ b/elements.html
@@ -40,7 +40,7 @@
 					<div class="col-xl-2 col-lg-2">
 						<div class="logo-img">
 							<a href="index.html">
-								<img src="img/logo.png" alt="">
+								<img src="img/logo.png" height="150" alt="">
 							</a>
 						</div>
 					</div>
@@ -762,7 +762,7 @@
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="">
+                                    <img src="img/logo.png" height="150" alt="">
                                 </a>
                             </div>
                             <p class="footer_text">200, A-block, Green road, USA <br>
