--- a/iletisim.html
+++ b/iletisim.html
@@ -39,7 +39,7 @@
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo-img">
                                     <a href="index.html">
-                                        <img src="img/logo.png" alt="">
+                                        <img src="img/logo.png" height="150" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -63,7 +63,6 @@
                                                     <li><a href="faaliyetlerimiz.html#kvk">kişisel verilerin korunması</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="ekibimiz.html">ekibimiz</a></li>
                                             <li><a class="active" href="iletisim.html">iletişim</a></li>
                                         </ul>
                                     </nav>
@@ -173,7 +172,7 @@
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
                             <div class="media-body">
                                 <h3>Osmanağa, Bahariye Cd.</h3>
-                                <p>No:19 Hak İş Hanı, Daire: 69,70,72 34714 Kadıköy/İstanbul</p>
+                                <p>No:19 Hak İş Hanı, Daire: 72 34714 Kadıköy/İstanbul</p>
                             </div>
                         </div>
                         <div class="media contact-info">
@@ -186,7 +185,7 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-email"></i></span>
                             <div class="media-body">
-                                <h3>bilgi@arifanilozturk.av.tr</h3>
+                                <h3>arifanilozturk@gmail.com</h3>
                                 <p>Bize e-posta üzerinden ulaşın.</p>
                             </div>
                         </div>
@@ -205,13 +204,13 @@
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="">
+                                    <img src="img/logo.png" height="150" alt="">
                                 </a>
                             </div>
                             <p class="footer_text">
-                                Osmanağa, Bahariye Cd. No:19 Hak İş Hanı, Daire: 69,70,72 34714 Kadıköy/İstanbul<br />
+                                Osmanağa, Bahariye Cd. No:19 Hak İş Hanı, Daire: 72 34714 Kadıköy/İstanbul<br />
                                 +90 545 479 0886 <br />
-                                <a class="domain" href="#">bilgi@arifanilozturk.av.tr</a>
+                                <a class="domain" href="#">arifanilozturk@gmail.com</a>
                             </p>
                             <div class="socail_links">
                                 <ul>
