--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <div class="col-xl-2 col-lg-2">
                 <div class="logo-img">
                   <a href="index.html">
-                    <img src="img/logo.png" alt="" />
+                    <img src="img/logo.png" height="150" alt="" />
                   </a>
                 </div>
               </div>
@@ -107,7 +107,6 @@
                           </li>
                         </ul>
                       </li>
-                      <li><a href="ekibimiz.html">ekibimiz</a></li>
                       <li><a href="iletisim.html">iletişim</a></li>
                     </ul>
                   </nav>
@@ -157,7 +156,7 @@
                     flex-direction: column;
                   "
                 >
-                  <h3>Av. Arif Anıl Öztürk</h3>
+                  <h3>Av. Arif Anıl ÖZTÜRK</h3>
                   <p>Hukuk ve Danışmanlık</p>
                 </div>
               </div>
@@ -338,47 +337,50 @@
               <span>Avukat</span>
             </div>
           </div>
-          <div class="col-xl-4 col-md-4 col-lg-4">
+          <div class="col-xl-3 col-md-3 col-lg-3">
             <div class="single_loyers text-center">
-              <div class="thumb">
+              <!-- <div class="thumb">
                 <img src="img/lawyers/2.png" alt="" />
-              </div>
+              </div> -->
               <h3>Abdullah Haşim ÖNER</h3>
               <span>Stajyer Avukat</span>
             </div>
           </div>
-          <div class="col-xl-4 col-md-4 col-lg-4">
+          <div class="col-xl-3 col-md-3 col-lg-3">
             <div class="single_loyers text-center">
-              <div class="thumb">
+              <!-- <div class="thumb">
                 <img src="img/lawyers/2.png" alt="" />
-              </div>
+              </div> -->
               <h3>Mehmet Baran ŞAHİN</h3>
               <span>Stajyer Avukat</span>
             </div>
           </div>
-          <div class="col-xl-4 col-md-4 col-lg-4">
+          <div class="col-xl-3 col-md-3 col-lg-3">
             <div class="single_loyers text-center">
-              <div class="thumb">
+              <!-- <div class="thumb">
                 <img src="img/lawyers/2.png" alt="" />
-              </div>
+              </div> -->
               <h3>Yavuz ETLİ</h3>
+              <span>Stajyer Avukat</span>
+            </div>
+          </div>
+          <div class="col-xl-3 col-md-3 col-lg-3">
+            <div class="single_loyers text-center">
+              <!-- <div class="thumb">
+                <img src="img/lawyers/2.png" alt="" />
+              </div> -->
+              <h3>Ezgi BAKIR</h3>
               <span>Stajyer Avukat</span>
             </div>
           </div>
           <div class="col-xl-12 col-md-12 col-lg-12">
             <div class="single_loyers text-center">
-              <div class="thumb">
+              <!-- <div class="thumb">
                 <img src="img/lawyers/2.png" alt="" />
-              </div>
+              </div> -->
               <h3>Sercan ÖZDEMİR</h3>
               <span>Stajyer Öğrenci</span>
             </div>
-          </div>
-          <div
-            class="col-xl-12 col-md-12 col-lg-12"
-            style="display: flex; justify-content: center; align-items: center"
-          >
-            <a href="ekibimiz.html" class="boxed-btn5">Tüm Ekibi Gör</a>
           </div>
         </div>
       </div>
@@ -518,7 +520,7 @@
               <span class="contact-info__icon"><i class="ti-home"></i></span>
               <div class="media-body">
                 <h3>Osmanağa, Bahariye Cd.</h3>
-                <p>No:19 Hak İş Hanı, Daire: 69,70,72 34714 Kadıköy/İstanbul</p>
+                <p>No:19 Hak İş Hanı, Daire: 72 34714 Kadıköy/İstanbul</p>
               </div>
             </div>
             <div class="media contact-info">
@@ -531,7 +533,7 @@
             <div class="media contact-info">
               <span class="contact-info__icon"><i class="ti-email"></i></span>
               <div class="media-body">
-                <h3>bilgi@arifanilozturk.av.tr</h3>
+                <h3>arifanilozturk@gmail.com</h3>
                 <p>Bize e-posta üzerinden ulaşın.</p>
               </div>
             </div>
@@ -548,13 +550,13 @@
               <div class="footer_widget">
                 <div class="footer_logo">
                   <a href="index.html">
-                    <img src="img/logo.png" alt="" />
+                    <img src="img/logo.png" height="150" alt="" />
                   </a>
                 </div>
                 <p class="footer_text">
-                  Osmanağa, Bahariye Cd. No:19 Hak İş Hanı, Daire: 69,70,72 34714 Kadıköy/İstanbul<br />
+                  Osmanağa, Bahariye Cd. No:19 Hak İş Hanı, Daire: 72 34714 Kadıköy/İstanbul<br />
                   +90 545 479 0886 <br />
-                  <a class="domain" href="#">bilgi@arifanilozturk.av.tr</a>
+                  <a class="domain" href="#">arifanilozturk@gmail.com</a>
                 </p>
                 <div class="socail_links">
                   <ul>
