--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             <div
               class="row align-items-center justify-content-between no-gutters"
             >
-              <div class="col-xl-2 col-lg-2">
+              <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                 <div class="logo-img">
                   <a href="index.html">
-                    <img src="img/logo.png" height="150" alt="" />
+                    <img src="img/logo.png" style="width:100%;height: 120px; object-fit: contain;" alt="" />
                   </a>
                 </div>
               </div>
-              <div class="col-xl-7 col-lg-8">
+              <div class="col-xl-6 col-lg-6">
                 <div class="main-menu d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
@@ -112,15 +112,9 @@
                   </nav>
                 </div>
               </div>
-              <div class="col-xl-3 col-lg-2 d-none d-lg-block">
+              <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                 <div class="social_media_links">
                   <ul>
-                    <!-- <li>
-                      <a href="#"> <i class="fa fa-facebook"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-twitter"></i> </a>
-                    </li> -->
                     <li>
                       <a href="https://www.instagram.com/arifanilozturkhukukvedanismanlik"> <i class="fa fa-instagram"></i> </a>
                     </li>
@@ -550,7 +544,7 @@
               <div class="footer_widget">
                 <div class="footer_logo">
                   <a href="index.html">
-                    <img src="img/logo.png" height="150" alt="" />
+                    <img src="img/logo.png" style="width:100%; object-fit: contain;" alt="" />
                   </a>
                 </div>
                 <p class="footer_text">
