remove unnecessary files

--- a/faaliyetlerimiz.html
+++ b/faaliyetlerimiz.html
@@ -33,68 +33,101 @@
 
  <!-- header-start -->
  <header>
-	<div class="header-area ">
-		<div id="sticky-header" class="main-header-area">
-			<div class="container-fluid p-0">
-				<div class="row align-items-center justify-content-between no-gutters">
-					<div class="col-xl-2 col-lg-2">
-						<div class="logo-img">
-							<a href="index.html">
-								<img src="img/logo.png" style="width:100%;height: 120px; object-fit: contain;" alt="" />
-							</a>
-						</div>
-					</div>
-					<div class="col-xl-7 col-lg-8">
-						<div class="main-menu  d-none d-lg-block">
-							<nav>
-								<ul id="navigation">
-									<li><a href="index.html">ana sayfa</a></li>
-									<li><a href="hakkimizda.html">hakkımızda</a></li>
-									<li><a class="active" href="faaliyetlerimiz.html">faaliyet alanlarımız <i class="ti-angle-down"></i></a>
-										<ul class="submenu">
-											<li><a href="faaliyetlerimiz.html#aile">aile hukuku</a></li>
-											<li><a href="faaliyetlerimiz.html#miras">miras hukuku</a></li>
-											<li><a href="faaliyetlerimiz.html#gayrimenkul">gayrimenkul ve inşaat hukuku</a></li>
-											<li><a href="faaliyetlerimiz.html#sigorta">sigorta hukuku</a></li>
-											<li><a href="faaliyetlerimiz.html#tuketici">tüketici hukuku</a></li>
-											<li><a href="faaliyetlerimiz.html#icra">icra ve iflas hukuku</a></li>
-											<li><a href="faaliyetlerimiz.html#ticaret">ticaret hukuku</a></li>
-											<li><a href="faaliyetlerimiz.html#is">iş hukuku</a></li>
-											<li><a href="faaliyetlerimiz.html#ceza">ceza hukuku</a></li>
-											<li><a href="faaliyetlerimiz.html#kvk">kişisel verilerin korunması</a></li>
-										</ul>
-									</li>
-									<li><a href="iletisim.html">iletişim</a></li>
-								</ul>
-							</nav>
-						</div>
-					</div>
-					<div class="col-xl-3 col-lg-2 d-none d-lg-block">
-						<div class="social_media_links">
-							<ul>
-								<!-- <li>
-						              <a href="#"> <i class="fa fa-facebook"></i> </a>
-						            </li>
-						            <li>
-						              <a href="#"> <i class="fa fa-twitter"></i> </a>
-						            </li> -->
-								<li>
-									<a href="https://www.instagram.com/arifanilozturkhukukvedanismanlik"> <i class="fa fa-instagram"></i> </a>
-								</li>
-								<li>
-									<a href="https://wa.me/+905454790886"> <i class="fa fa-whatsapp"></i> </a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-12">
-						<div class="mobile_menu d-block d-lg-none"></div>
-					</div>
-				</div>
+	<div class="header-area">
+	  <div id="sticky-header" class="main-header-area">
+		<div class="container-fluid p-0">
+		  <div
+			class="row align-items-center justify-content-between no-gutters"
+		  >
+			<div class="col-xl-3 col-lg-3">
+			  <div class="logo-img">
+				<a href="index.html">
+				  <img src="img/logo.png" style="width:100%;height: 120px; object-fit: contain;" alt="" />
+				</a>
+			  </div>
 			</div>
+			<div class="col-xl-6 col-lg-6">
+			  <div class="main-menu d-none d-lg-block">
+				<nav>
+				  <ul id="navigation">
+					<li><a href="index.html">ana sayfa</a></li>
+					<li><a href="hakkimizda.html">hakkımızda</a></li>
+					<li>
+					  <a class="active" href="faaliyetlerimiz.html"
+						>faaliyet alanlarımız <i class="ti-angle-down"></i
+					  ></a>
+					  <ul class="submenu">
+						<li>
+						  <a href="faaliyetlerimiz.html#aile">aile hukuku</a>
+						</li>
+						<li>
+						  <a href="faaliyetlerimiz.html#miras"
+							>miras hukuku</a
+						  >
+						</li>
+						<li>
+						  <a href="faaliyetlerimiz.html#gayrimenkul"
+							>gayrimenkul ve inşaat hukuku</a
+						  >
+						</li>
+						<li>
+						  <a href="faaliyetlerimiz.html#sigorta"
+							>sigorta hukuku</a
+						  >
+						</li>
+						<li>
+						  <a href="faaliyetlerimiz.html#tuketici"
+							>tüketici hukuku</a
+						  >
+						</li>
+						<li>
+						  <a href="faaliyetlerimiz.html#icra"
+							>icra ve iflas hukuku</a
+						  >
+						</li>
+						<li>
+						  <a href="faaliyetlerimiz.html#ticaret"
+							>ticaret hukuku</a
+						  >
+						</li>
+						<li>
+						  <a href="faaliyetlerimiz.html#is">iş hukuku</a>
+						</li>
+						<li>
+						  <a href="faaliyetlerimiz.html#ceza">ceza hukuku</a>
+						</li>
+						<li>
+						  <a href="faaliyetlerimiz.html#kvk"
+							>kişisel verilerin korunması</a
+						  >
+						</li>
+					  </ul>
+					</li>
+					<li><a href="iletisim.html">iletişim</a></li>
+				  </ul>
+				</nav>
+			  </div>
+			</div>
+			<div class="col-xl-3 col-lg-3 d-none d-lg-block">
+			  <div class="social_media_links">
+				<ul>
+				  <li>
+					<a href="https://www.instagram.com/arifanilozturkhukukvedanismanlik"> <i class="fa fa-instagram"></i> </a>
+				  </li>
+				  <li>
+					<a href="https://wa.me/+905454790886"> <i class="fa fa-whatsapp"></i> </a>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+			<div class="col-12">
+			  <div class="mobile_menu d-block d-lg-none"></div>
+			</div>
+		  </div>
 		</div>
+	  </div>
 	</div>
- </header>
+  </header>
  <!-- header-end -->
  
  <!-- bradcam_area_start  -->
