--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div
               class="row align-items-center justify-content-between no-gutters"
             >
-              <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+              <div class="col-xl-3 col-lg-3">
                 <div class="logo-img">
                   <a href="index.html">
                     <img src="img/logo.png" style="width:100%;height: 120px; object-fit: contain;" alt="" />
