fix alignment issue on contact section

--- a/iletisim.html
+++ b/iletisim.html
@@ -148,7 +148,7 @@
     <!-- ================ contact section start ================= -->
     <section class="contact-section">
             <div class="container">
-                <div class="d-none d-sm-block mb-5 pb-4">
+                <div class="mb-5">
                     <div class="map-responsive">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d752.9169494007699!2d29.02847772925924!3d40.988754598706414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDDCsDU5JzE5LjUiTiAyOcKwMDEnNDQuNSJF!5e0!3m2!1str!2str!4v1635274195848!5m2!1str!2str"
@@ -156,7 +156,7 @@
                             tabindex="0"></iframe>
                     </div>
                 </div>
-                <div class="row align-items-center justify-content-between">
+                <div class="row align-items-center justify-content-between" style="margin: auto;">
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                             <div class="media-body">
