--- a/index.html
+++ b/index.html
@@ -55,49 +55,9 @@
 								<div class="main-menu d-none d-lg-block">
 									<nav>
 										<ul id="navigation">
-											<li><a class="active" href="index.html">ana sayfa</a></li>
+											<li><a href="index.html">ana sayfa</a></li>
 											<li><a href="hakkimizda.html">hakkımızda</a></li>
-											<li>
-												<a href="faaliyetlerimiz.html"
-													>faaliyet alanlarımız <i class="ti-angle-down"></i
-												></a>
-												<ul class="submenu">
-													<li>
-														<a href="faaliyetlerimiz.html#aile">aile hukuku</a>
-													</li>
-													<li>
-														<a href="faaliyetlerimiz.html#miras">miras hukuku</a>
-													</li>
-													<li>
-														<a href="faaliyetlerimiz.html#gayrimenkul"
-															>gayrimenkul ve inşaat hukuku</a
-														>
-													</li>
-													<li>
-														<a href="faaliyetlerimiz.html#sigorta">sigorta hukuku</a>
-													</li>
-													<li>
-														<a href="faaliyetlerimiz.html#tuketici">tüketici hukuku</a>
-													</li>
-													<li>
-														<a href="faaliyetlerimiz.html#icra">icra ve iflas hukuku</a>
-													</li>
-													<li>
-														<a href="faaliyetlerimiz.html#ticaret">ticaret hukuku</a>
-													</li>
-													<li>
-														<a href="faaliyetlerimiz.html#is">iş hukuku</a>
-													</li>
-													<li>
-														<a href="faaliyetlerimiz.html#ceza">ceza hukuku</a>
-													</li>
-													<li>
-														<a href="faaliyetlerimiz.html#kvk"
-															>kişisel verilerin korunması</a
-														>
-													</li>
-												</ul>
-											</li>
+											<li><a href="faaliyetlerimiz.html">faaliyet alanlarımız</a></li>
 											<li><a href="iletisim.html">iletişim</a></li>
 										</ul>
 									</nav>
@@ -174,7 +134,7 @@
 								<div class="hover_inner">
 									<i class="flaticon-case"></i>
 									<h3>İş Hukuku</h3>
-									<a href="faaliyetlerimiz.html#is" class="lern_more">Ayrıntılı Bilgi</a>
+									<a href="faaliyetlerimiz.html" class="lern_more">Ayrıntılı Bilgi</a>
 								</div>
 							</div>
 						</div>
@@ -188,7 +148,7 @@
 								<div class="hover_inner">
 									<i class="flaticon-courthouse"></i>
 									<h3>Ticaret Hukuku</h3>
-									<a href="faaliyetlerimiz.html#ticaret" class="lern_more">Ayrıntılı Bilgi</a>
+									<a href="faaliyetlerimiz.html" class="lern_more">Ayrıntılı Bilgi</a>
 								</div>
 							</div>
 						</div>
@@ -203,7 +163,7 @@
 									<i class="flaticon-judge"></i>
 									<h3>Aile Hukuku</h3>
 
-									<a href="faaliyetlerimiz.html#aile" class="lern_more">Ayrıntılı Bilgi</a>
+									<a href="faaliyetlerimiz.html" class="lern_more">Ayrıntılı Bilgi</a>
 								</div>
 							</div>
 						</div>
@@ -218,7 +178,7 @@
 									<i class="flaticon-jury"></i>
 									<h3>Miras Hukuku</h3>
 
-									<a href="faaliyetlerimiz.html#miras" class="lern_more">Ayrıntılı Bilgi</a>
+									<a href="faaliyetlerimiz.html" class="lern_more">Ayrıntılı Bilgi</a>
 								</div>
 							</div>
 						</div>
@@ -233,7 +193,7 @@
 									<i class="flaticon-case"></i>
 									<h3>İcra ve İflas Hukuku</h3>
 
-									<a href="faaliyetlerimiz.html#icra" class="lern_more">Ayrıntılı Bilgi</a>
+									<a href="faaliyetlerimiz.html" class="lern_more">Ayrıntılı Bilgi</a>
 								</div>
 							</div>
 						</div>
@@ -248,7 +208,7 @@
 									<i class="flaticon-courthouse"></i>
 									<h3>Ceza Hukuku</h3>
 
-									<a href="faaliyetlerimiz.html#ceza" class="lern_more">Ayrıntılı Bilgi</a>
+									<a href="faaliyetlerimiz.html" class="lern_more">Ayrıntılı Bilgi</a>
 								</div>
 							</div>
 						</div>
@@ -263,7 +223,7 @@
 									<i class="flaticon-judge"></i>
 									<h3>Tüketici Hukuku</h3>
 
-									<a href="faaliyetlerimiz.html#tuketici" class="lern_more">Ayrıntılı Bilgi</a>
+									<a href="faaliyetlerimiz.html" class="lern_more">Ayrıntılı Bilgi</a>
 								</div>
 							</div>
 						</div>
@@ -278,7 +238,7 @@
 									<i class="flaticon-jury"></i>
 									<h3>Kişisel Verilerin Korunması</h3>
 
-									<a href="faaliyetlerimiz.html#kvk" class="lern_more">Ayrıntılı Bilgi</a>
+									<a href="faaliyetlerimiz.html" class="lern_more">Ayrıntılı Bilgi</a>
 								</div>
 							</div>
 						</div>
